k8s/diet-input.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diet-input-deployment
  labels:
    app: diet-input
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diet-input
  template:
    metadata:
      labels:
        app: diet-input
    spec:
      containers:
      - name: diet-input
        image: covanet/input-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: diet-input
spec:
  type: ClusterIP
  selector:
    app: diet-input
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
